--- a/templates/cadastroDespesa.html
+++ b/templates/cadastroDespesa.html
@@ -105,7 +105,7 @@
                 </div>  
                         
                 <label for="valor">
-                    <input class="input" type="text" placeholder="" required="" id="valor" name="valor">
+                    <input class="input" type="number" placeholder="" required="" id="valor" name="valor">
                     <span>Valor da despesa em R$</span>
                 </label> 
                     
