--- a/templates/editarDespesa.html
+++ b/templates/editarDespesa.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <label for="valor">
-                    <input class="input" type="text" placeholder="" required="" id="valor" name="valor" value="{{ despesa[2] }}">
+                    <input class="input" type="number" placeholder="" required="" id="valor" name="valor" value="{{ despesa[2] }}">
                     <span>Valor da despesa em R$</span>
                 </label>
 
