--- a/static/css/index.css
+++ b/static/css/index.css
@@ -532,3 +532,74 @@ footer {
 .span-resultado {
     color: white;
 }
+
+.card::before {
+  border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+  top: 20%;
+}
+
+.card::before,
+.card::after {
+  content: "";
+  position: absolute;
+  filter: blur(10px);
+}
+
+.cards {
+  display: flex;
+  gap: 40px;
+}
+
+.cards .red,
+.cards .blue,
+.cards .green {
+  width: 200px;
+  height: 180px;
+  font-family: "Avenir-Medium";
+  line-height: 33px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 600;
+  backdrop-filter: blur(30px);
+  background-color: var(--botao);
+  border: 1px solid black;
+}
+
+.cards .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  transition: 400ms;
+}
+
+.cards .card p.tip {
+  font-size: 1em;
+  font-weight: 700;
+}
+
+.cards .card p.second-text {
+  font-size: 0.7em;
+}
+
+.cards .card:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.cards:hover > .card:not(:hover) {
+  filter: blur(5px);
+  transform: scale(0.9, 0.9);
+}
+
+.secao-total {
+    display: flex;
+    justify-content: center;
+    background: var(--background);
+    padding-bottom: 80px;
+    padding-top: 30px;
+}
